Fix #97: Enhance CSS to avoid flickering for RTL inputs

--- a/css/star-rating.css
+++ b/css/star-rating.css
@@ -69,10 +69,10 @@
 .rating-rtl .filled-stars {
     left: auto;
     right: 0;
-    -moz-transform: matrix(-1, 0, 0, 1, 0, 0);
-    -webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
-    -o-transform: matrix(-1, 0, 0, 1, 0, 0);
-    transform: matrix(-1, 0, 0, 1, 0, 0);
+    -moz-transform: matrix(-1, 0, 0, 1, 0, 0) translate3d(0,0,0);
+    -webkit-transform: matrix(-1, 0, 0, 1, 0, 0) translate3d(0,0,0);
+    -o-transform: matrix(-1, 0, 0, 1, 0, 0) translate3d(0,0,0);
+    transform: matrix(-1, 0, 0, 1, 0, 0) translate3d(0,0,0);
 }
 
 .rating-rtl .filled-stars {
